--- a/install-cockpit.yml
+++ b/install-cockpit.yml
@@ -11,7 +11,7 @@
         # TASK 1
         # # 1a. Uncomment task description below and generate a task suggestion.
         # #     Note - The suggestion included Ansible best practices by using Fully Qualified Collection name.
-    # - name: Install cockpit package
+    - name: Install cockpit package
 
 
         # TASK 2
